Add reboot&terminate instance api
